# SORT

./: .gitignore  CMakeLists.txt
Concorrente/es1-code/hello/: hello.cpp
Concorrente/es1-code/matrix/: matrix_serial.cpp  matrix_threads.cpp
Concorrente/es2-code/: hello  hello-rt  hello-rt.cpp  timing  timing.cpp
Concorrente/es2-code/rt/: rt_pthread.cpp
Concorrente/es3-code/filosofi-A/: applicazione.cpp  monitor.cpp
Concorrente/es3-code/filosofi-B/: applicazione.cpp  monitor.cpp
Concorrente/es3-code/lettori-scrittori/: applicazione.cpp  monitor.cpp  monitor.h
Concorrente/es3-code/monitor/: monitor_simple.cpp
Concorrente/es3-code/simple/: simple_solved.cpp
EsercitazioniC/es1-code/hello/: hello.cpp
EsercitazioniC/es1-code/matrix/: Makefile  matrix_serial.cpp
EsercitazioniC/ex1/: fast_trigo.h
EsercitazioniC/ex2/esCunc/: client.c  server.c
EsercitazioniC/ex2/esList/: list.c
EsercitazioniC/ex3/esGiocatori/: Makefile  client.c  list.c
EsercitazioniC/ex3/esLibreria/: server.c
EsercitazioniC/ex4/: Makefile  client_f.c  list.c  list.h  server.c
EsercitazioniC/ex5/: client_g.c  client_v.c  list.h  server.c
ex1/: Makefile  fast_trigo.c  main  main.c
ex2/esList/: list.c  prova.c
ex3/esGiocatori/: Makefile  client.c  list.c  list.h  server.c
ex3/esLibreria/: Makefile  client_c.c  client_l.c  list.c  list.h  server.c
ex4/: Makefile  client_c.c  server.c
ex5/: Makefile  client_v.c  list.c  server.c
